Closed
Bug 887909
Opened 12 years ago
Closed 12 years ago
Convert nsIIDBFileHandle.idl to IDBFileHandle.webidl
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
mozilla25
People
(Reporter: janv, Assigned: Ms2ger)
References
Details
Attachments
(1 file)
|
10.95 KB,
patch
|
janv
:
review+
|
Details | Diff | Splinter Review |
It seems that FileHandle objects returned by IDB lost the .database attribute after conversion to new DOM bindings.
| Assignee | ||
Comment 1•12 years ago
|
||
| Reporter | ||
Comment 2•12 years ago
|
||
Comment on attachment 768835 [details] [diff] [review]
Patch v1
Review of attachment 768835 [details] [diff] [review]:
-----------------------------------------------------------------
looks good, r=me (consider fixing the nits)
::: dom/indexedDB/IDBFileHandle.cpp
@@ +34,5 @@
> }
>
> } // anonymous namespace
>
> +/* virtual */ JSObject*
Nit: "// virtual" and JSObject* on a new line
@@ +110,5 @@
> {
> NS_ASSERTION(NS_IsMainThread(), "Wrong thread!");
>
> + IDBDatabase* database = static_cast<IDBDatabase*>(mFileStorage);
> + MOZ_ASSERT(database);
Nit: I would keep the empty line here
::: dom/indexedDB/IDBFileHandle.h
@@ +22,1 @@
>
Nit: WrapObject() on a new line, like all the other methods
Attachment #768835 -
Flags: review?(Jan.Varga) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in
before you can comment on or make changes to this bug.
Description
•