Bug 887909 - Convert IDBFileHandle to WebIDL; r=janv